# pyfrost

./: .gitignore  CHANGELOG  LICENSE  README.md  requirements.txt  setup.cfg
docs/: Makefile  changelog.rst  conf.py  index.rst  py-modindex.rst
docs/_templates/: package.rst_t
src/module/modules/: pyfrost.txt
src/pyfrost/: main.py
src/pyfrost/api/: maya.py
src/pyfrost/compounds/: paint_delta.py
