[wheel]
universal = 1


[project]
repository_url = https://github.com/BenoitGielly/pyfrost
project_name = PyFrost
project_author = Benoit GIELLY
project_version = 1.0.0
project_src_dir = src
project_dependencies =
project_scripts =

[sphinx]
custom_syspath =
mock_modules = yaml numpy maya pymel PySide2 shiboken2
member_order = bysource
